Fix button is-inverted icon visibility

--- a/assets/styles/helpers/_button.scss
+++ b/assets/styles/helpers/_button.scss
@@ -205,7 +205,7 @@ $button-border-radius: 1.8rem;
                     border-color: $primary !important;
 
                     .icon {
-                        fill: $primary-invert !important;
+                        fill: $primary !important;
                     }
 
                     &:hover,
